c4prj1_deck/grade.txt
Grading at Sun Mar  7 12:34:55 UTC 2021
Compiling deck.c -> deck.o
deck.c: In function ‘add_card_to’:
deck.c:8:19: error: invalid type argument of unary ‘*’ (have ‘card_t {aka struct card_tag}’)
   card_t * ptrc = *c;
                   ^
deck.c: In function ‘add_empty_card’:
deck.c:16:18: error: incompatible type for argument 2 of ‘add_card_to’
 add_card_to(deck,empty);
                  ^
deck.c:6:6: note: expected ‘card_t {aka struct card_tag}’ but argument is of type ‘card_t * {aka struct card_tag *}’
 void add_card_to(deck_t * deck, card_t c){
      ^
Compilation of deck.c failed

Overall Grade: F
